0.10.2 (31-1-2015)
* Fixed destroy, which previously would overwrite the entry with
  uninitialised data, which might not set the deleted flag.
* Require only `get_buf` from `IO_PAGE`
* Fix travis.
* test: use OUnit's arg parser.
* return errors from size rather than raising Fs_error.

0.10.1 (01-Feb-2013):
* Use io-page.unix instead of io-page-unix.

0.10.0 (18-Dec-2013):
* speed up the 'fat' CLI tool by using buffered I/O by default.
  This requires mirage-block-unix.1.2.0

0.9.0 (15-Dec-2013):
* add `Fat.KV_RO` which is a read-only subset of the filesystem.
* Regenerate build files with OASIS 0.4.0.

0.8.0 (9-Dec-2013):
* cope with block devices whose sector size isn't 512 bytes
* allow 'fat create <filename>'

0.7.0 (9-Dec-2013):
* update to V1.BLOCK with 'id' interface
* fix 'make uninstall' (doesn't fail if configure hasn't
  been run)

0.6.1 (8-Dec-2013)
* install the 'fat' CLI tool by default

0.6.0 (7-Dec-2013)
* add a command-line tool for maniplating images ('fat')
* functorise over the mirage V1 BLOCK_DEVICE and IO_PAGE
* implements the mirage V1 type FS

0.5.0 (2-Dec-2013)
* Initial version of fat-filesystem