@@ -18,3 +18,5 @@ include S.BLOCK_DEVICE
   with type 'a io = 'a Lwt.t
    and type page_aligned_buffer = Cstruct.t
    and type id = string
+
+val connect : string -> [`Ok of t | `Error of error] io
