@@ -1,3 +1,5 @@
+* MemoryIO.connect now takes an FS.t, not an FS.id.
+
 0.10.2 (31-1-2015)
 * Fixed destroy, which previously would overwrite the entry with
   uninitialised data, which might not set the deleted flag.
